JumpScript/tests/baselines/reference/parserErrorRecovery_VariableList1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserErrorRecovery_VariableList1.jump(1,6): error TS1009: Trailing comma not allowed.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserErrorRecovery_VariableList1.jump(2,1): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/VariableLists/parserErrorRecovery_VariableList1.jump (2 errors) ====
    var a,
         ~
!!! error TS1009: Trailing comma not allowed.
    return;
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.